--- a/public/assets/css/templatemo-style.css
+++ b/public/assets/css/templatemo-style.css
@@ -557,7 +557,7 @@ http://www.templatemo.com/tm-515-eatery
   }
 
   #menu .container {
-    width: 100%;
+    /* width: 100%; */
   }
 
   #menu .col-md-4 {
