--- a/public/assets/css/animate.css
+++ b/public/assets/css/animate.css
@@ -3156,3 +3156,155 @@ Copyright (c) 2014 Daniel Eden
   -webkit-animation-name: slideOutUp;
           animation-name: slideOutUp;
 }
+
+
+/*================================================
+Go Top CSS
+=================================================*/
+.go-top {
+    position: fixed;
+    cursor: pointer;
+    bottom: 15px;
+    right: 15px;
+	border-radius:10px;
+    color: #ffffff;
+    background-color: #ce3232;
+    z-index: 4;
+    width: 50px;
+    text-align: center;
+    height: 52px;
+    line-height: 52px;
+    opacity: 0;
+    visibility: hidden;
+    -webkit-transition: .9s;
+    transition: .9s;
+    -webkit-transform: translateY(150px);
+    transform: translateY(150px);
+}
+
+.go-top.active {
+    -webkit-animation: bounceInDown 2s;
+    animation: bounceInDown 2s;
+    -webkit-transform: translateY(0);
+    transform: translateY(0);
+    opacity: 1;
+    visibility: visible;
+}
+
+.go-top i {
+    position: absolute;
+    top: 50%;
+    -webkit-transform: translateY(-50%);
+    transform: translateY(-50%);
+    left: 0;
+    right: 0;
+    margin: 0 auto;
+    -webkit-transition: 0.5s;
+    transition: 0.5s;
+}
+
+.go-top i:last-child {
+    opacity: 0;
+    visibility: hidden;
+    top: 60%;
+}
+
+.go-top::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    background: #252525;
+	border-radius: 10px;
+    opacity: 0;
+    visibility: hidden;
+    -webkit-transition: 0.5s;
+    transition: 0.5s;
+}
+
+.go-top:hover, .go-top:focus {
+    color: #ffffff;
+}
+
+.go-top:hover::before, .go-top:focus::before {
+    opacity: 1;
+    visibility: visible;
+}
+
+.go-top:hover i:first-child, .go-top:focus i:first-child {
+    opacity: 0;
+    top: 0;
+    visibility: hidden;
+}
+
+.go-top:hover i:last-child, .go-top:focus i:last-child {
+    opacity: 1;
+    visibility: visible;
+    top: 50%;
+}
+
+.product-content{
+	padding: 30px;
+    border: 1px solid #ddd;
+}
+
+
+.btn-call-now.active {
+    -webkit-animation: bounceInDown 2s;
+    animation: bounceInDown 2s;
+    -webkit-transform: translateY(0);
+    transform: translateY(0);
+    opacity: 1;
+    visibility: visible;
+}
+
+
+.btn-call-now {
+    display: flex;
+    height: 50px;
+	width: 180px;
+    align-items: center;
+    position: fixed;
+    line-height: 17px;
+    right: 15px;
+    background: #00a54f;
+    text-decoration: none;
+    z-index: 999999999;
+    color: #fff;
+    font-weight: 700;
+    font-size: 18px;
+    border-radius: 25px;
+    padding: 5px 19px 5px 5px;
+	visibility: hidden;
+}
+.btn-call-now:nth-child(odd){
+background: #ee242b;
+}
+.btn-call-01{
+bottom: 80px;
+}
+
+.btn-call-now:hover {
+    background: #ea5d5d;
+    color: #fff;
+}
+.btn-call-now em {
+    position: relative;
+    color: #fff;
+    font-size: 22px;
+    background: #ffa100;
+    width: 40px;
+    height: 40px;
+    line-height: 40px;
+    text-align: center;
+    border-radius: 20px;
+    margin-right: 5px;
+    animation-duration: 1s;
+    animation-name: calllink;
+    animation-iteration-count: infinite;
+    animation-direction: alternate;
+}
+
